# OS-Kernel

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.sh  configure-gdb-symbols.sh  qemu.sh
kernel/arch/i386/: tty.c
kernel/include/arch/i386/: io.h
kernel/include/kernel/: tty.h  vga.h
kernel/kernel/: kernel.c
libc/include/: assert.h
